Override the default cookie handler to accept cookies from one Strava sub-domain to another.