@@ -1,5 +1,7 @@
 package org.openstreetmap.josm.plugins.strava.heatmap.http;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Factory that returns either a JDK8 or JDK11 compatible HTTP client.
  */
@@ -13,9 +15,9 @@ public class StravaHttpClientFactory {
         try {
             StravaHttpClient stravaHttpClient = Class.forName("org.openstreetmap.josm.plugins.strava.heatmap.http.Jdk11StravaHttpClient")
                     .asSubclass(StravaHttpClient.class)
-                    .newInstance();
+                    .getDeclaredConstructor().newInstance();
             return stravaHttpClient;
-        } catch (NoClassDefFoundError | ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+        } catch (NoClassDefFoundError | ClassNotFoundException | NoSuchMethodException | IllegalAccessException | InvocationTargetException | InstantiationException e) {
             return new Jdk8StravaHttpClient();
         }
     }
